[MBUILDCACHE-39] Reformat