@@ -7,7 +7,7 @@
  * "License"); you may not use this file except in compliance
  * with the License.  You may obtain a copy of the License at
  *
- *  http://www.apache.org/licenses/LICENSE-2.0
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an
@@ -32,35 +32,27 @@ import static org.apache.maven.buildcache.hash.ReflectionUtils.getMethod;
 /**
  * CloseableBuffer https://stackoverflow.com/a/54046774
  */
-public class CloseableBuffer implements AutoCloseable
-{
+public class CloseableBuffer implements AutoCloseable {
 
-    private static final Cleaner CLEANER = doPrivileged( new PrivilegedAction<Cleaner>()
-    {
+    private static final Cleaner CLEANER = doPrivileged(new PrivilegedAction<Cleaner>() {
 
         @Override
-        public Cleaner run()
-        {
-            final String jsv = System.getProperty( "java.specification.version", "9" );
-            if ( jsv.startsWith( "1." ) )
-            {
+        public Cleaner run() {
+            final String jsv = System.getProperty("java.specification.version", "9");
+            if (jsv.startsWith("1.")) {
                 return DirectCleaner.isSupported() ? new DirectCleaner() : new NoopCleaner();
-            }
-            else
-            {
+            } else {
                 return UnsafeCleaner.isSupported() ? new UnsafeCleaner() : new NoopCleaner();
             }
         }
-    } );
+    });
 
-    public static CloseableBuffer directBuffer( int capacity )
-    {
-        return new CloseableBuffer( ByteBuffer.allocateDirect( capacity ) );
+    public static CloseableBuffer directBuffer(int capacity) {
+        return new CloseableBuffer(ByteBuffer.allocateDirect(capacity));
     }
 
-    public static CloseableBuffer mappedBuffer( FileChannel channel, MapMode mode ) throws IOException
-    {
-        return new CloseableBuffer( channel.map( mode, 0, channel.size() ) );
+    public static CloseableBuffer mappedBuffer(FileChannel channel, MapMode mode) throws IOException {
+        return new CloseableBuffer(channel.map(mode, 0, channel.size()));
     }
 
     private ByteBuffer buffer;
@@ -68,8 +60,7 @@ public class CloseableBuffer implements AutoCloseable
     /**
      * Unmap only DirectByteBuffer and MappedByteBuffer
      */
-    private CloseableBuffer( ByteBuffer buffer )
-    {
+    private CloseableBuffer(ByteBuffer buffer) {
         // Java 8: buffer.isDirect()
         this.buffer = buffer;
     }
@@ -77,57 +68,46 @@ public class CloseableBuffer implements AutoCloseable
     /**
      * Do not use buffer after close
      */
-    public ByteBuffer getBuffer()
-    {
+    public ByteBuffer getBuffer() {
         return buffer;
     }
 
     @Override
-    public void close()
-    {
+    public void close() {
         // Java 8: () -> CLEANER.clean(buffer)
-        boolean done = doPrivileged( new PrivilegedAction<Boolean>()
-        {
+        boolean done = doPrivileged(new PrivilegedAction<Boolean>() {
 
             @Override
-            public Boolean run()
-            {
-                return CLEANER.clean( buffer );
+            public Boolean run() {
+                return CLEANER.clean(buffer);
             }
-        } );
-        if ( done )
-        {
+        });
+        if (done) {
             buffer = null;
         }
     }
 
     // Java 8: @FunctionalInterface
-    private interface Cleaner
-    {
+    private interface Cleaner {
 
-        boolean clean( ByteBuffer buffer );
+        boolean clean(ByteBuffer buffer);
     }
 
-    private static class NoopCleaner implements Cleaner
-    {
+    private static class NoopCleaner implements Cleaner {
 
         @Override
-        public boolean clean( ByteBuffer buffer )
-        {
+        public boolean clean(ByteBuffer buffer) {
             return false;
         }
     }
 
-    private static class DirectCleaner implements Cleaner
-    {
+    private static class DirectCleaner implements Cleaner {
 
-        private static final Method ATTACHMENT = getMethod( "sun.nio.ch.DirectBuffer",
-                "attachment" );
-        private static final Method CLEANER = getMethod( "sun.nio.ch.DirectBuffer", "cleaner" );
-        private static final Method CLEAN = getMethod( "sun.misc.Cleaner", "clean" );
+        private static final Method ATTACHMENT = getMethod("sun.nio.ch.DirectBuffer", "attachment");
+        private static final Method CLEANER = getMethod("sun.nio.ch.DirectBuffer", "cleaner");
+        private static final Method CLEAN = getMethod("sun.misc.Cleaner", "clean");
 
-        public static boolean isSupported()
-        {
+        public static boolean isSupported() {
             return ATTACHMENT != null && CLEAN != null && CLEANER != null;
         }
 
@@ -137,32 +117,25 @@ public class CloseableBuffer implements AutoCloseable
          * EXCEPTION_ACCESS_VIOLATION" See: https://stackoverflow.com/a/31592947/3950982
          */
         @Override
-        public boolean clean( ByteBuffer buffer )
-        {
-            try
-            {
-                if ( ATTACHMENT.invoke( buffer ) == null )
-                {
-                    CLEAN.invoke( CLEANER.invoke( buffer ) );
+        public boolean clean(ByteBuffer buffer) {
+            try {
+                if (ATTACHMENT.invoke(buffer) == null) {
+                    CLEAN.invoke(CLEANER.invoke(buffer));
                     return true;
                 }
-            }
-            catch ( Exception ignore )
-            {
+            } catch (Exception ignore) {
             }
             return false;
         }
     }
 
-    private static class UnsafeCleaner implements Cleaner
-    {
+    private static class UnsafeCleaner implements Cleaner {
 
         // Java 9: getMethod("jdk.internal.misc.Unsafe", "invokeCleaner", ByteBuffer.class);
-        private static final Method INVOKE_CLEANER = getMethod( "sun.misc.Unsafe", "invokeCleaner", ByteBuffer.class );
-        private static final Object UNSAFE = getField( "sun.misc.Unsafe", "theUnsafe" );
+        private static final Method INVOKE_CLEANER = getMethod("sun.misc.Unsafe", "invokeCleaner", ByteBuffer.class);
+        private static final Object UNSAFE = getField("sun.misc.Unsafe", "theUnsafe");
 
-        public static boolean isSupported()
-        {
+        public static boolean isSupported() {
             return UNSAFE != null && INVOKE_CLEANER != null;
         }
 
@@ -172,16 +145,12 @@ public class CloseableBuffer implements AutoCloseable
          * makes the same call, but does not print the reflection warning
          */
         @Override
-        public boolean clean( ByteBuffer buffer )
-        {
-            try
-            {
+        public boolean clean(ByteBuffer buffer) {
+            try {
                 // throws IllegalArgumentException if buffer is a duplicate or slice
-                INVOKE_CLEANER.invoke( UNSAFE, buffer );
+                INVOKE_CLEANER.invoke(UNSAFE, buffer);
                 return true;
-            }
-            catch ( Exception ignore )
-            {
+            } catch (Exception ignore) {
             }
             return false;
         }
